cargo-featrures = ["test-dummy-unstable"]

[package]
name = "ray-tracer-challenge"
version = "0.1.0"
authors = ["lisp-ceo <j@lisp-ceo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = "0.18"
alga = "0.9.3"
approx = "0.3.2"

[lib]
name = "core"
bench = false

[[bin]]
name = "projectile"
bench = false
